feat: add paginated search with filters to ResourceTrackerController
- Add ResourceTrackerFilterRequest (extends BaseFilterRequest) with applicationName and resourceId filter fields
- Add paginated search() JPQL query to ResourceTrackerRepository supporting search across applicationName/resourceId, plus exact filters
- Replace listByApplicationName() with search() in service interface and impl returning PaginationResponse
- Replace /by-app endpoint with /search endpoint in controller

https://claude.ai/code/session_019Mz3YJbFM887rZY9WnoaPs